# orm-benchmarks

./: README.md  pyproject.toml
benchmarks/: bench.sh
benchmarks/fastapi_startkit/: README.md  bench.py  models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
