[project]
name = "orm-benchmarks"
version = "0.1.0"
description = "Benchmark: FastAPI-Startkit vs SQLModel vs SQLAlchemy (async)"
requires-python = ">=3.10"

dependencies = [
    # ORMs
    "fastapi-startkit[database,sqlite,postgres,mysql]>=0.46.0",
    "sqlmodel",
    "sqlalchemy",
    # DB drivers
    "aiosqlite",
    "asyncpg",
    "aiomysql",
    # Recommended accelerators
    "uvloop",
    "greenlet",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
